@@ -1,3 +1,4 @@
+* Allow to use invoice to fill party and account on statement line
 * Replace move_lines by a relate
 
 Version 2.8.0 - 2013-04-22
